# Portable-Weather-Station

./: .gitattributes  .gitignore  Cargo.toml  README.md  aws.rs  dhcp.rs  notes.md  server.py  timelapse.mov  weather_data.db  wokwi.toml
src/: http_client.rs  lib.rs  wifi.rs
templates/: index.html
